# KibiEngine

./: CMakeLists.txt  README.md
KibiEngineCore/: CMakeLists.txt
KibiEngineCore/includes/KibiEngineCore/: block.h  camera_controller.h  character.h  game.h  graphics_utils.h  mouse.h  npc_models.h  resource_manager.h  world.h
KibiEngineCore/includes/KibiEngineCore/GuiUI/: UI.h
KibiEngineCore/includes/KibiEngineCore/ecs/components/: camera.h  player_controller.h  renderable.h  transform.h
KibiEngineCore/includes/KibiEngineCore/ecs/systems/: camera_system.h  movement_system.h  rendering_system.h  rendering_systems.h
KibiEngineCore/includes/KibiEngineCore/resources/: resource_cache.h  texture_manager.h
KibiEngineCore/includes/KibiEngineCore/utils/: graphics_utils.h
KibiEngineCore/includes/KibiEngineCore/world/: chunk.h
KibiEngineCore/src/KibiEngineCore/: block.cpp  camera_controller.cpp  character.cpp  game.cpp  graphics_utils.cpp  mouse.c  npc_models.cpp  resource_manager.cpp  test.cpp  world.cpp
KibiEngineCore/src/KibiEngineCore/GuiUI/: UI.cpp
KibiEngineEditor/: CMakeLists.txt
KibiEngineEditor/src/: main.c  main.cpp
submodules/: CMakeLists.txt
submodules/imgui/style/: styles.h
